add summary for lect 1

--- a/lect/01.md
+++ b/lect/01.md
@@ -29,9 +29,11 @@ Available in the course book.
 
 ### Overview
 
-- A1: Regular expressions --> 
-- A1, A2: 
-- ...
+- A1: Regular expressions --> Lexical analyser (scanner)
+- A1, A2: Context-free grammar --> Syntactic analyser (parser)
+- A3, A4: Attribute grammar --> Semantic analyser 
+- A5: Intermediate code generator -- Interpreter (on the heap)
+- A6: Target code generator -- machine
 
 ---
 
@@ -81,14 +83,14 @@ void m(int a1, int a2) {
 ```
 
 What does the compiler need to do?
- - read text 
- - parsing the words
- - map variables to memory 
- - build syntax trees 
- - optimize
- - verificate that it makes sense (?)
- - check types
- - class not found
+- read text 
+- parsing the words
+- map variables to memory 
+- build syntax trees 
+- optimize
+- verificate that it makes sense (?)
+- check types
+- class not found
 
 ### Inside the compiler
 ```
@@ -107,9 +109,9 @@ target code generation                    Back end
 -- target code --
 ```
 ends: 
- - Front = independane on target language 
- - Middel = independane on both
- - Back = independane on source language
+- Front = independane on target language 
+- Middel = independane on both
+- Back = independane on source language
 
 ## LLVM 
 
@@ -135,7 +137,7 @@ while (k <= n) {\n    sum = sum + k;\n    k = k + 1;\n}
 
 And the scanner will produce tokens:
 ```
-WHILE LPAR LE ID RPAR LB ID EQ PLUS ID SC ID EQ ID PLUS INT SC RB
+WHILE LPAR ID LE ID RPAR LB ID EQ PLUS ID SC ID EQ ID PLUS INT SC RB
 ```
 
 Note, that white space is ignored.
@@ -164,6 +166,24 @@ Attrubute grammar --> Attribute evaluator generator --> Semantic analysis
                                                         ----
 ```
 
+## Errors
+
+Compile time errors
+- Lexical analasis: **lexcal error**, text cannot be interpreted as a token
+- Syntactic analysis (parsing): **syntactic errors**, tokens in the wrong order
+- Semantic analysis: **static-semantic errors**, wrong use of names, types, ...
+
+Runtime errors:
+- Code generation --> interpret/machine --> **runtime errors**, null pointer exception,
+division by zero,
+stack overflow, ...
+
+Other: 
+- **logic errors**, Compute the wrong result. 
+Not caught by the compiler or the machine.
+Normally try to catch using test cases.
+Assertions and program verification can also help.
+
 ## Example errors
 
 Lexical error: 
@@ -190,3 +210,41 @@ Logic error:
 ```java
 int square(int x) { return 2 * x; }
 ```
+
+---
+
+## Summary
+
+- 6 assignments, quite heavy
+- A compiler is sort of a translator
+- A compiler works like:
+```
+-- source text --
+Lexical analysis (scanning)
+-- tokens --
+Syntactic analysis (parsing)
+-- AST (abstract syntax tree) --
+Semantic analysis
+-- Attributed AST --
+Intermediate code generation              Front end
+-- intermediate code -------------------------------------
+optimization                              Middle end 
+-- ibterneduate code -------------------------------------
+target code generation                    Back end 
+-- target code --
+```
+- Ends:
+  - Front = independane on target language 
+  - Middel = independane on both
+  - Back = independane on source language
+- LLVM: an (common) intermediante layer such as java bytecode
+- Lexical analysis (scanner): goes from code to tokens. 
+Tokens are "labels" for different parts of a programming languages, e.g. `(k <= n) == LPAR LE ID ID RPAR`.
+- Parse tree: putting tokens in a hierarchy. 
+- Abstract syntax tree (AST): used to represent the program inside the compiler, similar to parse tree but it only contains the essentials (often a subset, but not always).
+- Errors that can occur: 
+  - lexical: text cannot be interpreted as a token
+  - syntactic: tokens in the wrong order
+  - static-semantic: wrong use of names, tokens, ...
+  - runtime: null pointer, division by zero, ...
+  - logic: compute the wrong result, "thinking" wrong
