--- a/lect/01.md
+++ b/lect/01.md
@@ -15,7 +15,7 @@ They are quite heavy, assignment 1 "only" 5h, other 12-15h each.
 
 Go to the lab times, TAs will (or should) note your presence. 
 
-Use [coursegitgit.cs.lth.se](coursegitgit.cs.lth.se) see Moodle. 
+Use [coursegit.cs.lth.se](coursegit.cs.lth.se) see Moodle. 
 You are supposed to use several commits per assignment => shows progress.
 
 ### Lecture quizzes
@@ -234,9 +234,9 @@ target code generation                    Back end
 -- target code --
 ```
 - Ends:
-  - Front = independane on target language 
-  - Middel = independane on both
-  - Back = independane on source language
+  - Front = independent on target language 
+  - Middel = independent on both
+  - Back = independent on source language
 - LLVM: an (common) intermediante layer such as java bytecode
 - Lexical analysis (scanner): goes from code to tokens. 
 Tokens are "labels" for different parts of a programming languages, e.g. `(k <= n) == LPAR LE ID ID RPAR`.
